--- a/app/src/main/res/layout/fragment_event_list.xml
+++ b/app/src/main/res/layout/fragment_event_list.xml
@@ -26,7 +26,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/text_margin"
             android:textAppearance="?attr/textAppearanceListItem"
-            android:text="@{eventData.timestamp}"
+            android:text="@{eventData.timestamp.toString()}"
             android:textColor="@android:color/black"/>
 
         <TextView
