--- a/app/src/main/res/layout/fragment_event.xml
+++ b/app/src/main/res/layout/fragment_event.xml
@@ -10,6 +10,7 @@
             type="com.dejqit.detectoreventdemo.ui.event.EventViewModel" />
     </data>
 
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -18,6 +19,7 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/list"
+            android:scrollbars="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:visibility="@{safeUnbox(eventModelView.isListLoading() ?  View.GONE : View.VISIBLE)}" />
