--- a/app/src/main/res/layout/fragment_event_list.xml
+++ b/app/src/main/res/layout/fragment_event_list.xml
@@ -2,42 +2,73 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
     <data>
         <import type="android.view.View"/>
+
+        <import type="com.dejqit.detectoreventdemo.util.BindingConverters" />
         <variable
             name="eventData"
             type="com.dejqit.detectoreventdemo.model.EventContent.Event" />
     </data>
+
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/text_margin"
+        android:background="@drawable/background_rect"
+        android:elevation="2dp">
+
+<!--        <TextView-->
+<!--            android:id="@+id/eventId"-->
+<!--            android:visibility="invisible"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_margin="@dimen/text_margin"-->
+<!--            android:textAppearance="?attr/textAppearanceListItem"-->
+<!--            android:text="@{eventData.id}"-->
+<!--            android:textColor="@android:color/black"/>-->
+
+        <TextView
+            android:id="@+id/cameraName"
+            android:layout_margin="@dimen/text_margin"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/camera_unknown"
+            android:textAppearance="?attr/textAppearanceListItem"
+            android:textColor="@android:color/black" />
 
         <TextView
             android:id="@+id/eventType"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
             android:layout_margin="@dimen/text_margin"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/cameraName"
             android:textAppearance="?attr/textAppearanceListItem"
-            android:text="@{eventData.type}"
-            android:textColor="@android:color/black"/>
+            android:text='@{eventData.type}'
+            android:textColor="@android:color/black"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/eventTimestamp"
-            android:layout_alignTop="@id/eventType"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/text_margin"
+            android:layout_below="@id/cameraName"
+            android:layout_toEndOf="@id/eventType"
             android:textAppearance="?attr/textAppearanceListItem"
-            android:text="@{eventData.timestamp.toString()}"
+            android:text="@{BindingConverters.formatDateTime(eventData.timestamp)}"
             android:textColor="@android:color/black"/>
 
-        <TextView
-            android:id="@+id/eventOrigin"
-            android:layout_alignTop="@id/eventTimestamp"
+        <ImageView
+            android:id="@+id/snapshotImage"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_below="@+id/eventType"
+            android:layout_centerHorizontal="true"
             android:layout_margin="@dimen/text_margin"
-            android:textAppearance="?attr/textAppearanceListItem"
-            android:text="@{eventData.origin}"
-            android:textColor="@android:color/black"/>
+            android:background="@drawable/background_rect"
+            android:contentDescription="@string/title_camera_snapshot"
+            android:scaleType="fitXY" />
+
     </RelativeLayout>
+
 
 </layout>
