--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -3,11 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_nvaigation"
-    app:startDestination="@id/eventFragment">
+    app:startDestination="@id/loginFragment">
 
     <fragment
         android:id="@+id/eventFragment"
         android:name="com.dejqit.detectoreventdemo.ui.event.EventFragment"
         android:label="EventFragment"
         tools:layout="@layout/fragment_event"/>
+    <fragment
+        android:id="@+id/loginFragment"
+        android:name="com.dejqit.detectoreventdemo.ui.login.LoginFragment"
+        android:label="login_fragment"
+        tools:layout="@layout/login_fragment" />
 </navigation>
