--- a/app/src/main/res/layout/login_fragment_list.xml
+++ b/app/src/main/res/layout/login_fragment_list.xml
@@ -8,11 +8,14 @@
     </data>
 
     <RelativeLayout
+        android:id="@+id/loginListItem"
+        android:clickable="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/text_margin"
         android:background="@drawable/background_rect"
-        android:elevation="2dp">
+        android:elevation="2dp"
+        android:focusable="true">
 
         <TextView
             android:id="@+id/name"
